# sddp-discovery-protocol

./: .gitignore  CHANGELOG.md  LICENSE  README.md  notify_example.txt  projector_broadcast.txt  pyproject.toml  response_example.txt  upnp-search.txt  upnp.py
.github/workflows/: publish.yml  test_publish.yml
doc/: index.md  secret_kv.config.md  secret_kv.md  tests.md
sddp_discovery_protocol/: __init__.py  __main__.py  client.py  constants.py  exceptions.py  internal_types.py  multicast_listener.py  pkg_logging.py  proj.py  sddp_datagram.py  sddp_socket.py  server.py  util.py  version.py
sddp_discovery_protocol/config/: __init__.py  base.py  context.py  keyring_passphrase.py  passphrase.py  sql_store.py  store.py
tests/: simple_search.py  simple_server.py
